tests/cases/errors/parse/unterminated_char.hc
//@ error: unterminated character constant
U0 Main()
{
  I64 c = 'ab;
}
